AIM-320: Sort schema definitions

--- a/juniper/Cargo.toml
+++ b/juniper/Cargo.toml
@@ -31,6 +31,7 @@ graphql-parser-integration = ["graphql-parser"]
 scalar-naivetime = []
 schema-language = ["graphql-parser-integration"]
 disable_introspection = []
+sort-schema-definitions = []
 
 [dependencies]
 juniper_codegen = { version = "0.15.9", path = "../juniper_codegen"  }
